--- a/assets/css/postit.css
+++ b/assets/css/postit.css
@@ -33,7 +33,7 @@ main section .post {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.242);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.507);
   background-image: linear-gradient(3deg, #00000066, #00000000);
 }
 
@@ -52,42 +52,50 @@ main section .post h3 {
   background-color: rgb(253, 253, 142);
   transform: rotate(354deg);
   transition: all 0.2s linear 0s;
+  animation: enter-post 1.1s ease-in forwards;
 }
 
 .post-2 {
   background-color: rgb(207, 249, 155);
   transform: rotate(349deg);
   transition: all 0.2s linear 0s;
+  animation: enter-post 1.2s ease-in forwards;
 }
 .post-3 {
   background-color: rgb(213, 166, 229);
   transform: rotate(6deg);
   transition: all 0.2s linear 0s;
+  animation: enter-post 1.3s ease-in forwards;
 }
 .post-4 {
   background-color: rgb(207, 249, 155);
   transform: rotate(354deg);
   transition: all 0.2s linear 0s;
+  animation: enter-post 1.4s ease-in forwards;
 }
 .post-5 {
   background-color: rgb(253, 253, 142);
   transform: rotate(351deg);
   transition: all 0.2s linear 0s;
+  animation: enter-post 1.5s ease-in forwards;
 }
 .post-6 {
   background-color: rgb(213, 166, 229);
   transform: rotate(352deg);
   transition: all 0.2s linear 0s;
+  animation: enter-post 1.6s ease-in forwards;
 }
 .post-7 {
   background-color: rgb(253, 253, 142);
   transform: rotate(11deg);
   transition: all 0.2s linear 0s;
+  animation: enter-post 1.7s ease-in forwards;
 }
 .post-8 {
   background-color: rgb(207, 249, 155);
   transform: rotate(3deg);
   transition: all 0.2s linear 0s;
+  animation: enter-post 1.8s ease-in forwards;
 }
 
 .fa-thumbtack {
@@ -150,4 +158,23 @@ main section .post h3 {
 
 .punteruoloUp {
   transform: translateX(20px) rotate(45deg);
+}
+
+@keyframes enter-post {
+  0% {
+    opacity: 0;
+    transform: scale(2.5);
+  }
+
+  25% {
+    opacity: 0.2;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
